Gasdetektor und Diskussion

--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -111,29 +111,29 @@ Eine Analyse dieser könnte möglicherweise auch auf der Peakhöhe aufbauen, um 
 \begin{figure}[h]
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos173KY13STUDPract.png}
+\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos173KY13STUDPract.pdf}
 \caption{Probe KY13}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos174KY14TUDPract.png}
+\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos174KY14TUDPract.pdf}
 \caption{Probe KY14}
 \end{subfigure}%
 \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos175KY16TUDPract.png}
+\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos175KY16TUDPract.pdf}
 \caption{Probe KY16}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos176KY17TUDPract.png}
+\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos176KY17TUDPract.pdf}
 \caption{Probe KY17}
 \end{subfigure}%
 \vskip\baselineskip
 \begin{subfigure}{.5\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/153Be.png}
+\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos153BeOTUDPract.pdf}
 \caption{Probe 153BeO}
 \end{subfigure}%
 \caption{Gemessene Stromstärken für Strahlen in Abhängigkeit der eingestellten Stromstärke am Bi $90^{\circ}$ Bouncer Magneten für verschiedene Proben.}
@@ -190,7 +190,7 @@ Zunächst wollen wir sehen ob sich die Nuklide unserer BeO-Probe nachweisen lass
 Dafür wurde in Abb. \ref{Auswertung_Bild_Faraday_Cup_BeO_HE} die gemessenen Ionenströme über dem Strom durch den Ablenkmagneten aufgetragen.
 \begin{figure}[ht]
 	\centering
-           \includegraphics[width=0.85\textwidth]{Pictures/Faraday_Cup_BeO_HE.pdf}
+           \includegraphics[width=0.85\textwidth]{Pictures/HEMass60-140pos153BeOTUDPract.pdf}
 	\caption{Strom gemessen im Faraday-Cup bei variieren des Magnetfeldes auf der Hochenergieseite für BeO-Probe. Die gemittelten x-Werte der Peaks sind eingezeichnet. Die Peaks wurden durch Vergleich mit umliegenden Werten gefunden. Die genaue Position wurde dann ermittelt indem die umliegenden Werte mit ihren Intensitäten als Wichtung gemittelt wurden.}
 	\label{Auswertung_Bild_Faraday_Cup_BeO_HE}
 \end{figure}
@@ -258,7 +258,7 @@ Für $^{10}$Be$^{2+}$ ergibt sich damit mit der Energie nach Beschleunigung von 
 Mit Formel \ref{kali} ergibt sich damit für die Stromstärke für $^{10}$Be$^{2+}$: $I = 96,4$ A, was uns wieder als Ausgangspunkt zur Identifikation des Strahls dient.
 Die Masse für gemessene Stromstärken ergibt sich jetzt zu:
 \begin{equation}
-m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^2 = 10 \: \text{u} \cdot \left( \frac{I}{96.40} \right)^{2} \: \text{A}}
+m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^2 = 10 \: \text{u} \cdot \left( \frac{I}{96.40} \right)^{2} \: \text{A}
 \end{equation}
 Die so berechneten Massen sind in Tab. \ref{highenergy} zu sehen.
 Durch betrachten der möglichen Verhältnisse von Ladung und Masse sowie Vergleich mit $^{10}$Be$^{2+}$ konnten dann die Teilchen identifiziert werden.
