--- a/AMS/Protokoll/diskussion.tex
+++ b/AMS/Protokoll/diskussion.tex
@@ -1,12 +1,12 @@
-\Section{Diksussion}
+\section{Diksussion}
 
 Alle Aufgabenteile konnten erfolgreich abgeschlossen werden.
 
 Im Niedrigenergiebereich wurden fünf verschiedene Proben auf ihre zusammensetzung untersucht.
-Dabei konnten in der153Be die Teilchen $^{16}$O$^{1-}$, $^{9}$Be$^{16}$O$^{1-}$ und $^{10}$Be$^{18}$O$^{1-}$ nachgewiesen werden.
-In den anderen Proben konnten diverse andere Teilchen, darunter bereits erwähnte mit anderen Isotopen sowie AlO gefunden werden.
-Zusätzlich wurden eine unbekannte Stoffe gefunden, die wir in diesem Praktikum nicht genauer identifizieren konnten.
-Mit einer genaueren Untersuchung der Probe bzw. genaueren Wissen über potentiell vorkommende Elemente sollte das aber auch möglich sein.
+Dabei konnten in der 153BeO die Teilchen $^{16}$O$^{1-}$, $^{9}$Be$^{16}$O$^{1-}$ und $^{10}$Be$^{18}$O$^{1-}$ nachgewiesen werden.
+In den anderen Proben konnten diverse andere Teilchen, darunter bereits erwähnte mit anderen Nukliden sowie AlO gefunden werden.
+Zusätzlich wurden einige unbekannte Stoffe gefunden, die wir in diesem Praktikum nicht genauer identifizieren konnten.
+Mit einer genauerem Untersuchung der Probe bzw. genaueren Wissen über potentiell vorkommende Elemente sollte das aber auch möglich sein.
 
 Im Hochenergiebereich wurde nur eine Probe untersucht.
 Bei dieser wurden die Nuklide $^{9}$Be, $^{10}$Be, $^{12}$C, $^{16}$O und $^{26}$Al in verschiedenen Ladungszuständen gefunden.
@@ -15,9 +15,13 @@ Dies lässt sich zumindest teilweise auf die unbekannten Ungenauigkeiten der Mes
 Möglicherweise wurden hier auch einzelne Ionen fehlgedeutet.
 Mit Kenntnis der Ungenauigkeiten könnte dies genauer werden.
 
-Gasdetektor hier einfügen
+Weiterhin wurde die Detektion und Identifikation von $^{10}\text{Be}$ in einer Gasgefüllten Ionisationsdetektor vorgenommen.
+Eine Trennung von den meisten unerwünschten Nukliden die nach dem Beschleuniger auftreten erfolgt durch einen Ablenkmagneten und einen ESA.
+Die Identifikation ist trotz dem potentiellen Auftreten des Isobars $^{10}\text{B}$ möglich.
+Es ist sogar möglich das Isobar quantitativ im Spektrum von $^{10}\text{Be}$ zu trennen, womit grundsätzlich eine genaue Bestimmung des Anteils des radioaktiven Isotops $^{10}\text{Be}$ möglich ist, und damit die eigentliche Altersbestimmung.
 
-Die Konzentration des Radionuklides $^{10}$Be wurde in vier verschiedenen Proben berechnet.
+Die Anteilsbestimmung wurde im letzten Versuchsteil vorgenommen.
+Die Konzentration des Radionuklides $^{10}$Be wurde dazu in vier verschiedenen Proben berechnet.
 Die Ergebnisse dafür sind in Tab. \ref{dis_con} zu sehen.
 \begin{table}[h]
 \centering
