--- a/AMS/scripts/AMS_Vorbereitung.ipynb
+++ b/AMS/scripts/AMS_Vorbereitung.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 133,
    "id": "9066c872",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 125,
    "id": "d80ae174",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "id": "075ce2e2",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 127,
    "id": "605cb877",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 128,
    "id": "e4e8f6cb",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 129,
    "id": "2ef086c1",
    "metadata": {},
    "outputs": [
@@ -194,6 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "766.6986\n",
       "Energy loss in foil: 766.6986 keV\n",
       "Energy of particle after loss in foil: 11.758678323076925 MeV\n"
      ]
@@ -201,6 +202,7 @@
    ],
    "source": [
     "dE_dx = 5.986e-1 + 7.661e2 # (SRIM, in keV/um)\n",
+    "print(dE_dx)\n",
     "dicke = 1.0 # in um\n",
     "E_loss = dE_dx * dicke\n",
     "print(\"Energy loss in foil:\", E_loss, \"keV\")\n",
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "id": "c7e42bda",
    "metadata": {},
    "outputs": [
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 131,
    "id": "e17daced",
    "metadata": {},
    "outputs": [
@@ -258,12 +260,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flugweite: 348.3610030925528 mm = 34.83610030925528 cm\n"
+      "flugweite: 577.749350601444 mm = 57.7749350601444 cm\n"
      ]
     }
    ],
    "source": [
-    "dE_dx = 3.373e-2 + 2.429e-5 # (SRIM, in MeV/mm)\n",
+    "dE_dx = 2.034e-2 + 1.256e-5 # (SRIM, in MeV/mm)\n",
     "flug_weite = E_after_loss / dE_dx\n",
     "print(\"flugweite:\", flug_weite, \"mm =\", flug_weite/10, \"cm\")"
    ]
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 132,
    "id": "5e3d2015",
    "metadata": {},
    "outputs": [
@@ -307,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
