--- a/AMS/Protokoll/Auswertung_konzentration.tex
+++ b/AMS/Protokoll/Auswertung_konzentration.tex
@@ -29,10 +29,10 @@ Die gemessenen Werte der Proben und die berechneten Konzentrationen sind in Tab.
 \hline
 Probe& $M_{sample}$[g] & $m_{spike}$ [g] & $ r_{meas, sample}$ & $c_{sample}$ \\
 \hline
-KY13 & $14,692$ &  $3,11 \cdit 10^{-4}$ & $ (4,15 \pm 0,19)\cdot 10^{-13}$ &     $(1.668 \pm 0,076) \cdot 10^{-17}$ \\
-KY14 & $16,775$ &  $3,09 \cdit 10^{-4}$ & $ (4,11 \pm 0,19)\cdot 10^{-13}$ &     $(1,438 \pm 0,066) \cdot 10^{-17}$ \\
-KY16 & $16,586$ &  $3,05 \cdit 10^{-4}$ & $ (3,28 \pm 0,15)\cdot 10^{-13}$ &     $(1,146 \pm 0.054) \cdot 10^{-17}$ \\
-KY17 & $9,489  $ &  $3,04 \cdit 10^{-4}$ & $ (1,533 \pm 0,081)\cdot 10^{-13}$ & $(9,330 \pm 0.049) \cdot 10^{-17}$ \\
+KY13 & $14,692$ &  $3,11 \cdot 10^{-4}$ & $ (4,15 \pm 0,19)\cdot 10^{-13}$ &     $(1.668 \pm 0,076) \cdot 10^{-17}$ \\
+KY14 & $16,775$ &  $3,09 \cdot 10^{-4}$ & $ (4,11 \pm 0,19)\cdot 10^{-13}$ &     $(1,438 \pm 0,066) \cdot 10^{-17}$ \\
+KY16 & $16,586$ &  $3,05 \cdot 10^{-4}$ & $ (3,28 \pm 0,15)\cdot 10^{-13}$ &     $(1,146 \pm 0.054) \cdot 10^{-17}$ \\
+KY17 & $9,489  $ &  $3,04 \cdot 10^{-4}$ & $ (1,533 \pm 0,081)\cdot 10^{-13}$ & $(9,330 \pm 0.049) \cdot 10^{-17}$ \\
 \hline
 \end{tabular}
 \label{concentrations}
