--- a/PP/main.tex
+++ b/PP/main.tex
@@ -13,7 +13,6 @@ parskip=full,  % Absätze durch Leerzeile trennen
 
 % Mathematik und Größen
 \usepackage{amsmath}
-\usepackage{amsfonts}
 \usepackage[locale=DE,  % deutsche Eigenarten, englisch -> US
 separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 ]{siunitx}
@@ -40,9 +39,6 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 % SI-Einheiten darstellen
 \usepackage{siunitx}
 
-% Tabellen mit geteilten Zeilen
-\usepackage{multirow}
-
 % Kopf-/Fußzeilen setzen
 \pagestyle{scrheadings}  % Stil für die Seite setzen
 \clearmainofpairofpagestyles  % Stil zurücksetzen, um ihn neu zu definieren
@@ -53,15 +49,12 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 \usepackage[hidelinks]{hyperref}  % Links und weitere PDF-Features
 
 % TODO: Titel und Autor, … festlegen
-
-%\newcommand\norm[1]{\left\lVert#1\right\rVert} % Norm
-
-\newcommand*{\titel}{Beschleunigermas­senspektrometrie und Methoden zur Altersbestimmung}
+\newcommand*{\titel}{Auswertung von pp-Kollisionsereignissen}
 \newcommand*{\autor}{Sebastian Thiede, Alexander Lettau}
-\newcommand*{\abk}{BM}
-\newcommand*{\betreuer}{Dr. Johannes Lachner, Dr. Georg Rugel}
-\newcommand*{\messung}{16.12.2021}
-\newcommand*{\ort}{Helmholtz-Zentrum Dresden Rossendorf, DREAMS}
+\newcommand*{\abk}{PP}
+\newcommand*{\betreuer}{Max Mäerker}
+\newcommand*{\messung}{02.12.2021 \& 09.12.2021}
+\newcommand*{\ort}{ASB/429}
 
 \hypersetup{pdfauthor={\autor}, pdftitle={\titel}}  % PDF-Metadaten setzen
 
@@ -86,13 +79,7 @@ Betreuer: & \betreuer\end{tabular}}
 
 % ----- DOKUMENT ANFANG -----
 
-\input{Aufgabenstellung.tex}
-\input{theorie.tex}
-\input{Versuchsaufbau.tex}
-\input{Auswertung_mit_kali.tex}
-\input{Auswertung_Gasdetektor.tex}
-\input{Auswertung_konzentration.tex}
-\input{diskussion.tex}
+\input{Aufgabenstellung}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
