Korrektur erste Hälfte

--- a/AMS/Protokoll/Aufgabenstellung.tex
+++ b/AMS/Protokoll/Aufgabenstellung.tex
@@ -1,6 +1,6 @@
 \section{Aufgabenstellung}
 Die Beschleunigermas­senspektrometrie (AMS) ist ein wichtiges Werkzeug zur Trennung und Detektierung von Nukliden.
-Eine der häufigsten Anwendungen ist die Altersbestimmung von Proben aus der Natur durch Messung der Konzentration verschiedener Nuklide, die auf der Erdoberfläche durch kosmische Strahlung entstehen.
+Eine der häufigsten Anwendungen ist die Altersbestimmung von Proben aus der Natur durch messen der Konzentration verschiedener Nuklide, die auf der Erdoberfläche durch kosmische Strahlung entstehen.
 Im Gegensatz zu anderen Verfahren der Massenspektrometrie erreicht man bei der AMS eine sehr gute Unterdrückung atomarer und molekularer Isobare.
 Die Messzeiten sind relativ kurz und es lassen sich auch kleine Proben untersuchen.
 
