--- a/AMS/Protokoll/bibliography.bib
+++ b/AMS/Protokoll/bibliography.bib
@@ -1,6 +1,12 @@
 @misc{Bild_DREAMS,
-  author = {Prof. Dr. Anton Wallner},
-  year = {2020},
-  title = {Schematik DREAMS},
-  howpublished = {\url{https://www.hzdr.de/db/Cms?pNid=1012}}
-  }
+    author = {Prof. Dr. Anton Wallner},
+    year = {2020},
+    title = {Schematik DREAMS},
+    howpublished = {\url{https://www.hzdr.de/db/Cms?pNid=1012}}
+    }
+@misc{Bild_Ionisationskammer,
+    author = {Prof. Dr. Anton Wallner, Dr. Georg Rugel},
+    year = {2021},
+    title = {Schematik Ionisationskamer},
+    howpublished = {Bereitgestellte Praktikumsanleitung}
+    }
