--- a/AMS/scripts/AMS_Vorbereitung.ipynb
+++ b/AMS/scripts/AMS_Vorbereitung.ipynb
@@ -300,8 +300,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "4e466586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.41 12.064385806400546\n",
+      "44.15 13.074650482512892\n",
+      "49.24 16.263153481826702\n",
+      "50.6 17.173930687444205\n",
+      "52.07 18.186278080626977\n",
+      "60.11 24.236066086188938\n",
+      "61.52 25.386412098942817\n",
+      "62.57 26.26037853801982\n",
+      "65.0 28.33970892938953\n",
+      "66.13 29.333623773427213\n",
+      "67.25 30.335646121886906\n",
+      "69.51 32.40882226877313\n",
+      "73.79 36.522768692301874\n",
+      "78.78 41.629445393573164\n",
+      "80.59 43.56432443164631\n"
+     ]
+    }
+   ],
+   "source": [
+    "peaks = np.array([42.41, 44.15, 49.24, 50.6, 52.07, 60.11, 61.52, 62.57, 65.0, 66.13, 67.25, 69.51, 73.79, 78.78, 80.59])\n",
+    "mass = 25*(peaks/61.05)**2\n",
+    "for i in np.arange(0, peaks.size,1):\n",
+    "    print(peaks[i], mass[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99261a1a",
    "metadata": {},
    "outputs": [],
    "source": []
