--- a/AMS/Protokoll/Auswertung_mit_kali.tex
+++ b/AMS/Protokoll/Auswertung_mit_kali.tex
@@ -1,14 +1,14 @@
 \section{Experimenteller Teil}
 Im ersten Teil der Auswertung verfolgen wir im Wesentlichen Ionen durch die Anlage.
-Untersucht werden soll dabei eine vorbereitete BeO-Probe.
+Untersucht werden soll dabei eine vorbereitete BeO-Probe, genannt \glqq 153BeO\grqq{}, und die Proben \glqq 13KY\grqq{}, \glqq 14KY\grqq{}, \glqq 16KY\grqq{} und \glqq 17KY\grqq{}.
 Im zweiten Teil betrachten wir aufgenommene Spektren und untersuchen eine unbekannte Probe.
 
 \subsection{Auf dem Weg zum Beschleuniger}
-Nach der Produktion der negativen Ionen durch sputtern werden diese direkt mit insgesamt \SI{29}{\kilo\electronvolt} beschleunigt.
-Sie durchlaufen dann eine elektrostatischen Analysierer und einen ersten Ablenkmagneten.
+Nach der Produktion der negativen Ionen durch sputtern werden diese wie erwähnt mit insgesamt \SI{29}{\kilo\electronvolt} beschleunigt.
+Sie durchlaufen dann einen elektrostatischen Analysierer und einen ersten Ablenkmagneten.
 Das Ziel hier ist eine Ionenmasse vorzuselektieren.
 Da wir BeO untersuchen sind mögliche gesuchte Ionen $^{9}\text{Be}^{16}\text{O}^{-}$ (stabiles Beryllium-Iosotop) und $^{10}\text{Be}^{16}\text{O}^{-}$ (radioaktives Beryllium-Iostop mit einer Halbwertszeit von \num{1.51e6} Jahren).
-Zu beachten ist, dass Sauerstoff zwar zum Großteil aus $^{16}$O besteht, jedoch in geringen Mengen auch die stabilen Isotope $^{17}$O und $^{18}$O vorkommen können, was eine geiwsse Quelle für Unsicherheiten ist.
+Zu beachten ist, dass Sauerstoff zwar zum Großteil aus $^{16}$O besteht, jedoch in geringen Mengen auch die stabilen Isotope $^{17}$O und $^{18}$O vorkommen können, was eine gewisse Quelle für Unsicherheiten ist.
 Wir kennen die kinetische Energie $E_{\text{kin}}$, den Ladungszustand $q_{\text{ion}}$, die Masse der Ionen $m_{\text{ion}}$ und den Krümmungsradius der weiterführenden Trajektorie $\rho$.
 Daher kann man durch geeignete Wahl der Stärke des Magnetfeldes die Ionenmasse auswählen:
 \begin{gather}
@@ -18,125 +18,129 @@ Daher kann man durch geeignete Wahl der Stärke des Magnetfeldes die Ionenmasse 
 Ionen mit einer anderen Masse oder anderem Ladungszustand haben im Magneten eine anders gekrümmte Trajektorie und gelangen daher nicht durch die Eintrittsöffnung zum Beschleuniger.
 (Tatsächlich lässt sich wie in Gleichung \ref{Auswertung_eq_Magnet} zu sehen nur nach $\frac{\sqrt{m_{\text{ion}}}}{q_{\text{ion}}}$ selektieren.
 Ionen mit vierfacher Masse und doppelter Ladung würden also auch weiterkommen. Derart schwere Teilchen sind jedoch fast gar nicht in der Probe vorhanden.)
-Nicht unterscheiden lässt sich jedoch zwischen Molekularen isobaren, so zum Beispiel zwischen $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{9}\text{Be}^{17}\text{O}^{-}$ (wobei $^{17}\text{O}$ in der Natur sehr selten vorkommt) oder $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{10}\text{B}^{16}\text{O}^{-}$ ($^{10}\text{B}$ entsteht beim Beta-Zerfall von $^{10}\text{Be}$).
+An dieser Stelle lässt sich jedoch nicht unterscheiden zwischen Molekularen isobaren, so zum Beispiel zwischen $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{9}\text{Be}^{17}\text{O}^{-}$ (wobei $^{17}\text{O}$ in der Natur sehr selten vorkommt) oder $^{10}\text{Be}^{16}\text{O}^{-}$ und $^{10}\text{B}^{16}\text{O}^{-}$ ($^{10}\text{B}$ entsteht beim Beta-Zerfall von $^{10}\text{Be}$).
 Für $\rho$ war ein Wert von \SI{0.4}{\metre} gegeben.
 Damit ergeben sich für einfach negativ geladene Ionen folgende benötigte Magnetfeldstärken:
-\begin{table}[h]
-  \centering
+\begin{center}
   \begin{tabular}{|c|c|}
     \hline
-    Ion & Magnetfeldstärke \\
+    Ion & Magnetfeldstärke / \si{\tesla} \\
     \hline
-    $^{9}\text{Be}^{16}\text{O}^{-}$ & \SI{-0.306}{\tesla} \\
+    $^{9}\text{Be}^{16}\text{O}^{-}$ & \num{-0.306} \\
     \hline
-    $^{10}\text{Be}^{16}\text{O}^{-}$ & \SI{-0.313}{\tesla} \\
+    $^{10}\text{Be}^{16}\text{O}^{-}$ & \num{-0.313} \\
     \hline
   \end{tabular}
-  \caption{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
+  \captionof{table}{Benötigte Magnetfeldstärken im ersten Ablenkmagneten für Ionen vor dem Beschleuniger}
   \label{Auswertung_tab_Ionenenergien_vor_Besch}
-\end{table}
-Um diese Magnetfelder anzulegen ist eine Kalibrierung des Magneten erforderlich, die jedoch in diesem Versuch nicht durchgeführt wurde.
-Stattdessen haben wir die chemisch reine Probe 153BeO genutzt, um die Stromstärke zu bestimmen, welche der Magnetfeldstärke zur Selektion von BeO$^{-1}$ entspricht.
-Diese kann dann als Vergleichswert dienen um aus den Verhältnissen der Magnetfeldstärken bzw. Stromstärken die Teilchen zu identifizeren.
-Dieses Verhältnis folgt aus Formel \ref{Auswertung_eq_mMagnet} zu $\frac{B_1}{B_2} = \sqrt{\frac{m_1}{m_2}}$.
-Vor dem Tandem ergibt sich die Energie der BeO$^{-1}$ Teilchen zu $E = q \cdot U_{ionsource}$.
-Nach Formel \ref{Auswertung_eq_Magnet}, mit dem Radius des Magneten $\rho = 0,4$ m, ergibt sich für das zugehörige Magnetfeld $T = 0,306$ T.
-Messungen am Magneten ergaben eine zugehörige Stromstärke von $I = 61,05$ A.
+\end{center}
+Um diese Magnetfelder anzulegen ist im besten Fall eine Kalibrierung des Magneten vorhanden, die jedoch in diesem Versuch nicht durchgeführt wurde.
+Stattdessen haben wir die chemisch reine Probe 153BeO genutzt, um die Stromstärke zu bestimmen, welche der Magnetfeldstärke zur Selektion von BeO$^{1-}$ entspricht.
+Diese kann dann als Vergleichswert dienen, um aus den Verhältnissen der Magnetfeldstärken bzw. Stromstärken die Teilchen zu identifizeren.
+Dieses Verhältnis folgt aus Formel \ref{Auswertung_eq_Magnet}: $\frac{B_1}{B_2} = \sqrt{\frac{m_1}{m_2}}$.
+Vor dem Tandem ergibt sich die Energie der BeO$^{1-}$ Teilchen zu $E = q \cdot U_{\text{Ionenquelle}}$.
+Nach Formel \ref{Auswertung_eq_Magnet}, mit dem Radius des Magneten $\rho = \SI{0.4}{\metre}$, ergibt sich für das zugehörige Magnetfeld $B = \SI{0.306}{\tesla}$.
+Messungen am Magneten ergaben eine zugehörige Stromstärke von $I = \SI{61.05}{\ampere}$.
 Die Masse eines unbekannten Teilchens ergibt sich damit zu:
 \begin{equation}
-    m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^2 = 25 \: \text{u} \cdot \frac{I}{61.05 \: \text{A}}
-    \label{LE_masse}
+    m_2 = m_1 \cdot \left( \frac{B_2}{B_1} \right)^{2} = \SI{25}{\atomicmassunit} \cdot \left (\frac{I}{\SI{61.05}{\ampere}}\right )^{2}
+    \label{Auswertung_LE_masse}
 \end{equation}
-Hier müssen wir als prinzipielle Unsicherheit beachten, dass sich Teilchen mit mehrfach negativer Ladung als Teilchen niedrigerer Masse detektiert werden (siehe Formel \ref{Auswertung_eq_Magnet}).
 Unsicherheiten der Beschleunigungsspannungen und des Spulenradius werden hier nicht betrachtet, da sie gegenüber der variablen Hysterese des Magneten kaum einen Einfluss auf die Unsicherheit der Ablenkung haben.
 Diese wiederrum wäre ebenfalls am besten experimentell (z.B. mittels Hall-Sonde) zu bestimmen.
+Leider haben wir dies in dem Versuch nicht gemacht.
 
 In Abb. \ref{lowenergy} sind jetzt die Messungen dargestellt.
-Zur Identifikation betrachten wir als erstes die 153BeO Probe, die berechneten Massen sind in Tab, \Ref{153Be} zu sehen.
-Die höhe der Peaks wird für die folgende Analyse nicht betrachtet.
+Zur Identifikation betrachten wir als erstes die 153BeO Probe.
+Die berechneten Massen sind in Tabelle \ref{153Be} zu sehen.
+Die Höhe der Peaks wird für die folgende Analyse nicht betrachtet, da der ADC des Faraday-Cup gerade an den Maxima häufig übersteuert hat und wir damit keinen zuverlässigen Messwert haben.
 \begin{table}[h]
-\centering
-\caption{Berechnung der Massen im Niedrigenergiebereich für Probe 153Be.}
-\begin{tabular}{|c |c|}
-\hline
-I[A] & m[u] \\
-\hline
-49,03 & 16,1 \\
-61,31 & 25,2 \\
-64,88 & 28,2 \\
-\hline
-\end{tabular}
-\label{153Be}
+    \centering
+    \caption{Berechnung der Massen im Niedrigenergiebereich für Probe 153Be.}
+    \begin{tabular}{|c |c|}
+        \hline
+        I / \si{\ampere} & m / \si{\atomicmassunit} \\
+        \hline
+        \num{49.03} & \num{16.1} \\
+        \num{61.31} & \num{25.2} \\
+        \num{64.88} & \num{28.2} \\
+        \hline
+    \end{tabular}
+    \label{153Be}
 \end{table}
 Die entsprechenden Massen sind hier eindeutig zuordbar, was bei einer reinen Probe auch zu erwarten war.
 \begin{itemize}
-\item $16$ u entsprechen der Masse von $^{16}$O$^{1-}$.
-\item $25$ u entsprechen der Masse von $^{9}$Be$^{16}$O$^{1-}$.
-\item $28$ U entsprechen der Masse von $^{10}$Be$^{18}$O$^{1-}$
+    \item \SI{16}{\atomicmassunit} entsprechen der Masse von $^{16}$O$^{1-}$.
+    \item \SI{25}{\atomicmassunit} entsprechen der Masse von $^{9}$Be$^{16}$O$^{1-}$.
+    \item \SI{28}{\atomicmassunit} entsprechen der Masse von $^{10}$Be$^{18}$O$^{1-}$.
 \end{itemize}
-Hier ist auffällig, das zwar sowohl $^{16}$O$^{1-}$ als auch  $^{10}$Be$^{18}$O$^{1-}$ nachweisbar sind, einzelne  $^{18}$O$^{1-}$ Ionen oder  weitere Kombinationen der verschiedenen Isotope jedoch nicht gefunden wurden.
+Hier ist auffällig, dass zwar sowohl $^{16}$O$^{1-}$ als auch $^{10}$Be$^{18}$O$^{1-}$ nachweisbar sind, einzelne $^{18}$O$^{1-}$ Ionen oder  weitere Kombinationen der verschiedenen Isotope jedoch nicht gefunden wurden.
 
 Die Probe KY13 besitzt weitgehend dieselben Peaks.
-Neu hinzugekommen ist bei dieser einer bei $42,29$ A, was einer Masse von $12$ u entspricht.
-Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe  oder unter Umständen auch durch Verunreinigungen mit der Luft kommen könnten.
+Neu hinzugekommen ist bei dieser einer bei \SI{42.29}{\ampere}, was einer Masse von \SI{12}{\atomicmassunit} entspricht.
+Eine Erklärung dieser Masse wären $^{12}$C$^{1-}$ Ionen, welche aus der Probe oder auch durch Lufteinschlüsse in der Probe zu finden sind.
 Ebenfalls möglich, jedoch wäre hier die Abweichung etwas hoch, wären $^{10}$Be$^{16}$O$^{2-}$ Teilchen.
 
-In Tab. \ref{KY_rest} sind jetzt die weiteren Peaks und dazu passenden Ionen dargestellt.
-Auf bereits bereits bestimmte Peaks werden wir hier nicht mehrfach eingehen, wir identifizieren nur neu erscheinende.
+In Tabelle \ref{KY_rest} sind die weiteren Peaks und die dazu passenden Ionen dargestellt.
+Auf bereits bestimmte Peaks werden wir hier nicht weiter eingehen, wir identifizieren nur neu erscheinende.
 
 \begin{table}[h]
-\centering
-\caption{Identifizierung der Ionen am Magneten. Teilchen die mit X identifiziert wurden lassen sich nicht zuordnen.}
-\begin{tabular}{|c| c |c|c|}
-\hline
-Probe & I[A] & m[u] & Teilchen \\
-\hline
-KY14    & 50,6    & 17.2 & $^{17}$O$^{1-}$ \\
- 	& 60,11 & 24,2 & X\\
-	& 62,57 & 26,2 & $^{10}$Be$^{1-}$$^{16}$O$^{1-}$ oder  $^{26}$Al$^{1-}$ \\
-	& 66,13 & 29,3 & X\\
-	& 67,24 & 30,3 & X\\
-	& 69,51 & 32,4 & X\\
-	& 73,79 & 36,5 & X\\
-	& 78,78 & 41,6 $^{26}$Al$^{1-}$$^{16}$O$^{1-}$\\
-	& 80,59 &43,56 $^{27}$Al$^{1-}$$^{16}$O$^{1-}$\\
-\end{tabular}
-\label{KY}
+    \centering
+    \caption{Identifizierung der Ionen am Magneten. Bei Teilchen die mit ? markiert wurden sind wir uns unsicher. Es sind nicht alle möglichen Ionen aufgelistet, manchmal sind eine Vielzahl an Kombinationen möglich.}
+    \begin{tabular}{|c|c|c|c|}
+        \hline
+        Probe & I / \si{\ampere} & m / \si{\atomicmassunit} & Teilchen \\
+        \hline
+        \multirow{9}*{KY14} & \num{44.15} & \num{13.1}  & $^{13}$C$^{1-}$ \\
+                            & \num{50.6}  & \num{17.2}  & $^{17}$O$^{1-}$ \\
+                            & \num{52.07} & \num{18.2}  & $^{18}$O$^{1-}$ \\
+ 	                        & \num{60.11} & \num{24.2}  & $^{12}$C$_{2}^{1-}$ ? \\
+ 	                        & \num{62.57} & \num{26.2}  & $^{10}$Be$^{16}$O$^{1-}$, $^{26}$Al$^{1-}$, $^{9}$BeH$^{16}$O$^{1-}$\\
+ 	                        & \num{66.13} & \num{29.3}  & $^{17}$O$^{12}$C$^{1-}$, $^{16}$O$^{13}$C$^{1-}$ \\
+ 	                        & \num{67.25} & \num{30.3}  & $^{9}$Be$_{2}$$^{12}$C$^{1-}$ ? \\
+ 	                        & \num{69.51} & \num{32.4}  & $^{16}$O$_{2}^{1-}$ \\
+ 	                        & \num{73.79} & \num{36.5}  & $^{18}$O$_{2}^{1-}$ ? \\
+ 	                        & \num{78.78} & \num{41.6}  & $^{26}$Al$^{16}$O$^{1-}$ \\
+ 	                        & \num{80.59} & \num{43.56} & $^{27}$Al$^{16}$O$^{1-}$ \\
+        \hline
+    \end{tabular}
+    \label{KY_rest}
 \end{table}
 Die anderen Proben wiesen keine weiteren neuen Peaks auf und sind im wesentlichen zu KY14 identisch.
 AlO ist ein Stoff der häufig in Quarz, aus dem die Proben besteht, vorkommt und nur schwer von BeO zu trennen ist.
-Nicht zuordbare Peaks lassen sich wahrscheinlich auf Verschmutzungen oder Spurenelemente in der Probe zurückführen.
+Nicht perfekt zuordbare Peaks lassen sich wahrscheinlich auf Verschmutzungen oder Spurenelemente in der Probe zurückführen.
 Eine Analyse dieser könnte möglicherweise auch auf der Peakhöhe aufbauen, um z. B. zufällige Verschmutzungen durch entsprechend geringe Intensität als solche zu erkennen.
+Dafür müsste man jedoch sicherstellen, dass der ADC des Faraday-Cups nicht übersteuert wird.
 
 \begin{figure}[h]
-\begin{subfigure}{.5\textwidth}
+\begin{subfigure}{.45\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos173KY13STUDPract.pdf}
+\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos173KY13STUDPract.pdf}
 \caption{Probe KY13}
-\end{subfigure}%
-\begin{subfigure}{.5\textwidth}
+\end{subfigure}
+\begin{subfigure}{.45\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos174KY14TUDPract.pdf}
+\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos174KY14TUDPract.pdf}
 \caption{Probe KY14}
-\end{subfigure}%
+\end{subfigure}
 \vskip\baselineskip
-\begin{subfigure}{.5\textwidth}
+\begin{subfigure}{.45\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos175KY16TUDPract.pdf}
+\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos175KY16TUDPract.pdf}
 \caption{Probe KY16}
-\end{subfigure}%
-\begin{subfigure}{.5\textwidth}
+\end{subfigure}
+\begin{subfigure}{.45\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos176KY17TUDPract.pdf}
+\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos176KY17TUDPract.pdf}
 \caption{Probe KY17}
-\end{subfigure}%
+\end{subfigure}
 \vskip\baselineskip
-\begin{subfigure}{.5\textwidth}
+\begin{subfigure}{.45\textwidth}
 \centering
-\includegraphics[width=.8\linewidth]{Pictures/LEMass40-85pos153BeOTUDPract.pdf}
+\includegraphics[width=.95\linewidth]{Pictures/LEMass40-85pos153BeOTUDPract.pdf}
 \caption{Probe 153BeO}
-\end{subfigure}%
-\caption{Gemessene Stromstärken für Strahlen in Abhängigkeit der eingestellten Stromstärke am Bi $90^{\circ}$ Bouncer Magneten für verschiedene Proben.}
+\end{subfigure}
+\caption{Gemessene Stromstärken der Strahlen (im Faraday-Cup) in Abhängigkeit der eingestellten Stromstärke am BI \ang{90} Bouncer-Magneten für verschiedene Proben.}
 \label{lowenergy}
 \end{figure}
 
