--- a/AMS/Protokoll/diskussion.tex
+++ b/AMS/Protokoll/diskussion.tex
@@ -39,7 +39,7 @@ KY17 &  $(9,330 \pm 0,049) \cdot 10^{-17}$ & 112,5\\
 \label{dis_con}
 \end{table}
 Wir konnten feststellen, dass die Konzentration scheinbar linear mit zunehmender Tiefe abnimmt.
-Dies haben wir so erklärt, dass $^{10}$Be durch Ereignisse mit kosmischer Strahlung entsteht und tieferliegende Proben aufgrund ihrer Abschirmung daher weniger $^{10}$Be enthalten müssen.
+Dies haben wir so erklärt, dass $^{10}$Be durch Ereignisse mit kosmischer Strahlung entsteht und tieferliegende Proben aufgrund ihres Alters daher weniger $^{10}$Be enthalten müssen.
 Nach dieser Erklärung sollte eigentlich ein exponentieller Abfall stattfinden, was wir aber weder ausschließen noch bestätigen können.
 Weitere Proben zur Messung könnten diese Frage aber beantworten.
 Eine Verfälschung der Proben durch hochenergetische Strahlung aus anderen Quellen ist potentiell möglich, würde aber nichts am abnehmen der Konzentration ändern.
