--- a/AMS/Protokoll/theorie.tex
+++ b/AMS/Protokoll/theorie.tex
@@ -36,9 +36,12 @@ Die jetzt positiven Ionen werden im Tandem weiter zur anderen Seite beschleunigt
 Die Energie der Teilchen nach dem Tandem kann berechnet werden mit:
 \begin{gather}
     E_{\text{tot}} = e \cdot (U_{\text{Ionenquelle}} + U_{\text{Beschleuniger}}) \cdot \frac{m_{\text{Ion}^{+}}}{m_{\text{Molekül}^{-}}} + U_{\text{Beschleuniger}} \cdot q_{\text{Ion}^{+}}
+    \label{Theo_Energie_nach_Beschleuniger}
 \end{gather}
 Mit der Elementarladung $e$, der Spannung an der Ionenquelle $U_{\text{Ionenquelle}}$, der Spannung am Tandem $U_{\text{Beschleuniger}}$, der Ionenmasse $m_{\text{Ion}^{+}}$, der Masse der Moleküle $m_{\text{Molekül}^{-}}$ und dem Ladungszustand der Ionen $q_{\text{Ion}^{+}}$.
-Dort steht ein weiterer \ang{90} Magnet, durch dessen magnetisches Feld die Isotope nach Masse (und Ladung) getrennt werden.
+Im ersten Summand wird der Term $\frac{m_{\text{Ion}^{+}}}{m_{\text{Molekül}^{-}}}$ benutzt um die anteilige kinetische Energie des entstandenen Ions bis zum Argongas zu beschreiben.
+Der zweite Summand beschreibt die Beschleunigung nach dem Argongas.
+Im Strahlengang nach dem Beschleuniger steht ein weiterer \ang{90} Magnet, durch dessen magnetisches Feld die Isotope nach Masse (und Ladung) getrennt werden.
 Isotope mit hoher Konzentration können jetzt mithilfe eines Faraday-Cup gemessen werden.
 
 Für die Messung der Radioisotope ergibt sich jetzt das Problem, dass einzelne $^{10}$B Isotope im Strahl verbleiben, aufgrund der gleichen Masse und Ladungszustände wie das interessante $^{10}$Be Nuklid, was die weitere Messung stören würde.
