--- a/AMS/scripts/AMS_Vorbereitung.ipynb
+++ b/AMS/scripts/AMS_Vorbereitung.ipynb
@@ -335,8 +335,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 251,
+   "id": "6a17ca51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3.94915764  4.84496866  5.56602676  5.97894707  7.73086035  8.87778372\n",
+      " 10.81686309 17.7602625  20.6953892 ]\n",
+      "[ 1.75518117  2.15331941  2.47378967  2.65730981  3.43593793  8.87778372\n",
+      " 10.81686309 17.7602625   9.19795075]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = np.array([60.58, 67.1, 71.92, 74.54, 84.76, 90.83, 100.26, 128.47, 138.68])\n",
+    "m_d_q = 10 * (I/96.40)**2\n",
+    "print(m_d_q)\n",
+    "charges =    np.array([3, 3, 3, 3, 3, 2, 2, 2, 3])\n",
+    "m = m_d_q*(2/charges)**2\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "99261a1a",
+   "id": "9154e272",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b43a373",
    "metadata": {},
    "outputs": [],
    "source": []
