--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -25,7 +25,7 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 \usepackage{booktabs}  % schönere Tabellen
 \usepackage[toc]{multitoc}  % mehrspaltiges Inhaltsverzeichnis
 \usepackage{csquotes}  % Anführungszeichen mit \enquote
-\usepackage{caption}  % Anpassung der Bildunterschriften, Tabellenüberschriften
+% \usepackage{caption}  % Anpassung der Bildunterschriften, Tabellenüberschriften
 \usepackage{subcaption}  % Unterabbildungen, Untertabellen, …
 \usepackage{enumitem}  % Listen anpassen
 \setlist{itemsep=-10pt}  % Abstände zwischen Listenpunkten verringern
@@ -51,6 +51,8 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 \ihead{\headmark}  % Seitenbeschriftung mittig in Kopfzeile
 
 \usepackage[hidelinks]{hyperref}  % Links und weitere PDF-Features
+
+\usepackage{float}
 
 % TODO: Titel und Autor, … festlegen
 
